--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
     "next": "15.1.3",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
